<resources>
    <string name="app_name">LOGIN_APP_COM</string>
    <string name="login_txt1">Usuario</string>
    <string name="hint_txt1">JhonDoe</string>
    <string name="login_lbl2">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="btn_singup">Register</string>
    <string name="lbl_actregister_username">Usuario</string>
    <string name="lbl_actregister_password">Contraseña</string>
    <string name="lbl_actregister_gender">Genero</string>
    <string name="lbl_actregister_female">Femenino</string>
    <string name="lbl_actregister_male">Masculino</string>
    <string name="lbl_actregister_register">Registrar</string>
    <string name="lbl_actregister_goback">Volver</string>
    <string name="msg_not_valid_user">Usuario no valido</string>
    <string name="msg_not_valid_user_lenght">Usuario no valido: max 10 letras</string>
    <string name="msg_not_valid_password">Contraseña no valida</string>
    <string name="msg_not_valid_login">Datos de sesion no validos</string>
    <string name="msg_home_hello">Hola</string>
    <string name="msg_winnerX">Gana X!</string>
    <string name="msg_winnerO">Gana O!</string>
    <string name="msg_draw">Empate!</string>
    <string name="img_description">App Icon</string>
    <string name="lbl_color">Color favorito</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_reset">Reset</string>
    <string name="lbl_animal_fav">animal favorito</string>
    <string name="hint_password">*********</string>
    <string name="chk_blue">Azul</string>
    <string name="chk_red">Rojo</string>

</resources>
